tests/workflows/tests/snapshots/security__security_protect_disable_json.snap
---
source: tests/workflows/tests/security.rs
expression: disable_envelope
---
{
  "success": true,
  "change": "disabled",
  "protect": {
    "path": "[POLICY_PATH]",
    "active": false
  }
}
