tests/workflows/tests/snapshots/security__security_protect_status_json_inactive.snap
---
source: tests/workflows/tests/security.rs
expression: status_envelope
---
{
  "success": true,
  "protect": {
    "path": "[POLICY_PATH]",
    "active": false
  }
}
